--- a/mradmin-application-dev.yml
+++ b/mradmin-application-dev.yml
@@ -6,26 +6,26 @@ spring:
     database: 0
     port: 6379
   datasource:
-    name: mysql
-    url: jdbc:mysql://localhost:3306/zhangxinyu27?ullNamePatternMatchesAll=true&serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8
+    url: jdbc:mysql://localhost:3306/1906_demo?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
     username: root
     password: root
+    druid:
+      initial-size: 5
+      min-idle: 10
+      max-active: 20
   freemarker:
-    allow-request-override: false
     cache: false
-    check-template-location: true
     charset: UTF-8
-    suffix: .ftl
-    templateLoaderPath: classpath:/templates/
+    allow-request-override: false
+    check-template-location: true
     content-type: text/html
     expose-request-attributes: true
+    expose-session-attributes: true
+    suffix: .ftl
+    template-loader-path: classpath:/templates/
+    allow-session-override: true
 mybatis:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
-  #扫描哪个包下的mapper映射文件
-  mapper-locations: classpath:mapper/*.xml
-  #type-aliases-package: com.mr.test_orderclass.po
-  logging:
-  level:
-    # 打印与我们程序相关的日志信息
-    com.mr.mradmin: debug
+  mapper-locations: classpath:/mapper/*.xml
+#  type-aliases-package: com.mr.securitydemo.dto
