--- a/mradmin-application-dev.yml
+++ b/mradmin-application-dev.yml
@@ -6,7 +6,7 @@ spring:
     database: 0
     port: 6379
   datasource:
-    url: jdbc:mysql://localhost:3306/1906_demo?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://localhost:3306/zhangxinyu27?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
     username: root
     password: root
     druid:
